content/vault/v1.20.x/content/docs/audit/schema.mdx
---
layout: docs
page_title: Audit entry schema
description: Schema and description of the structure of Vault's audit log entries.
---

# Audit entry schema

Each Vault audit log entry is its own JSON object, separated from other entries by line breaks.

Audit log entries share a set of attributes that are common across all API endpoints. In addition, each entry records request and response attributes that are specific to the API endpoint that was called.

Audit log entries can be of `"type": "request"` or `"type": "response"`, depending on whether they represent the API request received by the server or the response sent by it. Each "response" audit log entry matches its corresponding "request" entry through the `.request.id` value included in both entries.

## Request audit entry

| Attribute | Type | Description | Example |
| :---- | :---- | :---- | :---- |
| `type` | `string` | Type of audit log entry. For request audit log entries, this is always `request`. | `"request"` |
| `time` | `string` | Date and time of the API request, in ISO 8601 format. | `"2025-06-05T16:10:22.292517Z"` |
| `auth` | `object` | JSON object containing information about the authenticated principal that performed the API request. See [`auth`](#auth) below. |  |
| `request` | `object` | JSON object containing information about the API request. See [`request`](#request) below. |  |
| `error` | `string` | If there is an error in the request, this field contains the corresponding error message. | `"error converting input {\"name\":\"John\"} for field \"data\": '' expected a map, got 'string'"` |
| `forwarded_from` | `string` | If a Performance Standby node forwarded the request, this field contains the host (and usually port) information of the Performance Standby node. | `"10.1.14.156:8200"` or `"vault-1.prod.corp.com:443"` |

```json
{
  "auth": <auth>,
  "error": "",
  "forwarded_from": "",
  "request": <request>,
  "time": "",
  "type": ""
}
```

## Response audit entry

| Attribute | Type | Description | Example |
| :---- | :---- | :---- | :---- |
| `type` | `string` | Type of audit log entry. For response audit log entries, this is always `response`. | `"response"` |
| `time` | `string` | Date and time of the API response, in ISO 8601 format. | `"2025-06-05T16:10:22.292639Z"` |
| `auth` | `object` | JSON object containing information about the authenticated principal that performed the API request. See [`auth`](#auth) below. |  |
| `request` | `object` | JSON object containing information about the API request. See [`request`](#request) below. |  |
| `response` | `object` | JSON object containing information about the API response. See [`response`](#response) below. |  |
| `error` | `string` | If the request resulted in an error, this field contains the corresponding error message. | `"1 error occurred:\n\t* invalid request\n\n"` |
| `forwarded_from` | `string` | If a Performance Standby node forwarded the request, this field contains the host (and usually port) information of the Performance Standby node. | `"10.1.14.156:8200"` or `"vault-1.prod.corp.com:443"` |

```json
{
  "auth": <auth>,
  "error": "",
  "forwarded_from": "",
  "request": <request>,
  "response": <response>,
  "time": "",
  "type": ""
}
```

## Auth object (auth) ((#auth))

The following auth object definition includes example data with simple types (`string`, `bool`, `int`) and used in other JSON examples that include an `<auth>` object.

Most attributes in the `<auth>` object are omitted when they are not relevant. For example, `accessor` and `client_token` are included only for authenticated requests, and `metadata` is included only when there is metadata attached to the token.

| Attribute | Type | Description | Example |
| :---- | :---- | :---- | :---- |
| `accessor` | `string` | Accessor of the Vault token that performed the request. This value is hashed by default; the example shows a *non-hashed* token accessor. Refer to [token accessors](/vault/docs/concepts/tokens#token-accessors) for more information. | `"gwAezHGajo8hzAtMFKm4JLz8"` |
| `client_token` | `string` | Vault token that performed the request, in hashed form. | `"hmac-sha256:cb1456a6..."` |
| `display_name` | `string` | Name associated with the Vault token that performed the request. This is a non-sensitive value that can help identify tokens. If a display name is not set, `"token"` will be shown. | `"my-token"` |
| `token_type` | `string` | Whether the Vault token is a `service`, `batch`, or `periodic` token. Refer to [token types](/vault/docs/concepts/tokens#token-types). | `"service"` |
| `token_issue_time` | `string` | Date and time when the Vault token was issued, in ISO 8601 format. | `"2025-06-05T16:10:22.292639Z"` |
| `token_ttl` | `integer` | Validity period of the Vault token, in seconds and as of when the token was first issued, relative to `token_issue_time`. Note that this value is not updated when the token's lifetime is changed subsequent to initial issuance. | `2764800` |
| `metadata` | `object` | Metadata associated with the Vault token. | `{ "username": "alice" }` |
| `num_uses` | `integer` | When the API request results in a token being issued, which token has a limited number of uses, the number of uses on that token. | `5` |
| `remaining_uses` | `integer` | If the Vault token has a limit on the number of uses, the number of uses remaining *prior to the current request*. | `5` |
| `entity_created` | `boolean` | Whether the request resulted in an entity being created, i.e. an authorized principal logs into Vault for the first time. Omitted when false. | `true` |
| `entity_id` | `string` | If the Vault token is associated with an entity, the ID of that entity. | `"c314fc09-7d87-f7c2-93f0-e1c053d9762e"` |
| `policies` | `list(string)` | List of the names of the ACL policies associated with either the Vault token or the corresponding entity. | `["my-policy", "default"]` |
| `identity_policies` | `list(string)` | If the Vault token is associated with an entity, a list of the names of the ACL policies associated (directly or via group membership) with that entity. | `["my-policy"]` |
| `token_policies` | `list(string)` | A list of the names of the ACL policies associated directly with the Vault token. | `["default"]` |
| `no_default_policy` | `boolean` | Whether the Vault token does **not** have Vault's "default" ACL policy associated with it. Omitted when false. | `true` |
| `external_namespace_ policies` | `object` | If the Vault token is associated with an entity, and that entity inherits ACL policies from a namespace other than the namespace in which the entity exists, a JSON object containing a boolean attribute `allowed` and `granting_policies`, a list of those inherited ACL policies. Refer to the JSON structure below for more information about `granting_policies`. |  |
| `policy_results` | `object` | JSON object containing a boolean attribute `allowed` and `granting_policies`, a list of ACL policies associated with either the Vault token or the corresponding entity that resulted in the request being allowed. Refer to the JSON structure below for more information about `granting_policies`. |  |

```json
{
  "accessor": "",
  "client_token": "",
  "display_name": "",
  "entity_created": "",
  "entity_id": "",
  "external_namespace_policies": {
    "allowed": true,
    "granting_policies": [
      {
        "name": "",
        "namespace_id": "",
        "namespace_path": "",
        "type": ""
      }
    ]
  },
  "identity_policies": [""],
  "metadata": {},
  "no_default_policy": false,
  "num_uses": 10,
  "policies": [""],
  "policy_results": {
    "allowed": true,
    "granting_policies": [
      {
        "name": "",
        "namespace_id": "",
        "namespace_path": "",
        "type": ""
      }
    ]
  },
  "remaining_uses": 5,
  "token_policies": [""],
  "token_issue_time": "",
  "token_ttl": 3600,
  "token_type": ""
}
```

## Request object (request) ((#request))

The following request object definition includes example data with simple types (`string`, `bool`, `int`) and used in other JSON examples that include a `<request>` object.

| Attribute | Type | Description | Example |
| :---- | :---- | :---- | :---- |
| `id` | `string` | Random ID generated by Vault to uniquely identify the API request. | `"c3af465f-fd72-..."` |
| `operation` | `string` | Whether the request is a `create`, `read`, `update`, `delete`, or `list` operation. | `"read"` |
| `namespace` | `object` | JSON object with the namespace's unique `id` and its `path`. | `{"id": "root"}` |
| `path` | `string` | API path that received the request. | `"auth/token/lookup-self"` |
| `request_uri` | `string` | The original request path from the HTTP request, if it differs from `path` (e.g., when the Vault namespace is specified as an HTTP header). |  |
| `mount_accessor` | `string` | Unique identifier of the Vault mount (secret engine or authentication backend) that received the API request. | `"auth_token_a928787c"` |
| `mount_type` | `string` | Type of Vault mount that received the API request. | `"token"` |
| `mount_running_version` | `string` | Version string for the Vault mount that received the API request. | `"v1.20.0+builtin.vault"` |
| `mount_running_sha256` | `string` | If the mount that received the API request is an external plugin, the SHA-256 hash of the plugin's running version. |  |
| `mount_is_external_ plugin` | `boolean` | Whether the mount that received the API request is an external plugin. | `true` |
| `remote_address` | `string` | IP address of the client making the request, as seen by Vault. Note that load balancers, proxies, and reverse proxies may all mask the true client's IP address. | `"127.0.0.1"` |
| `remote_port` | `integer` | Port number used by the client making the request, as seen by Vault. | `61787` |
| `headers` | `object` | JSON object containing request headers [configured](/vault/docs/audit#logging-of-request-headers) to be logged. | `{"user-agent": ["Go-http-client/1.1"]}` |
| `policy_override` | `boolean` | Whether the client requested an override of a [Sentinel policy](/vault/docs/enterprise/sentinel). | `true` |
| `client_id` | `string` | ID of the Vault [client](https://developer.hashicorp.com/vault/docs/concepts/client-count) making the request. | `"f60d5e8b-7a77-..."` |
| `client_token` | `string` | Vault token that performed the request, in hashed form. | `"hmac-sha256:cb1456a6..."` |
| `client_token_accessor` | `string` | Accessor of the Vault token that performed the request. This value is hashed by default; the example shows a *non-hashed* token accessor. Refer to [token accessors](/vault/docs/concepts/tokens#token-accessors) for more information. | `"gwAezHGajo8hzAtMFKm4JLz8"` |
| `client_certificate_ serial_number` | `string` | If the client's connection to Vault is mutually authenticated, the serial number of the client's TLS certificate. |  |
| `wrap_ttl` | `integer` | If the client requested the response to be [wrapped](/vault/docs/concepts/response-wrapping), the number of seconds for which the wrapped response will be available. | `3600` |
| `data` | `object` | JSON object containing the request's payload. This is dependent on the API endpoint called. |  |
| `replication_cluster` | `string` | If the request was forwarded from a Performance Replication secondary cluster, the name of the secondary cluster. | |

```json
{
  "client_certificate_serial_number": "",
  "client_id": "",
  "client_token": "",
  "client_token_accessor": "",
  "data": {},
  "id": "",
  "headers": {},
  "mount_accessor": "",
  "mount_class": "",
  "mount_point": "",
  "mount_type": "",
  "mount_running_version": "",
  "mount_running_sha256": "",
  "mount_is_external_plugin": "",
  "namespace": {
    "id": "",
    "path": ""
  },
  "operation": "",
  "path": "",
  "policy_override": true,
  "remote_address": "",
  "remote_port": 1234,
  "replication_cluster": "",
  "request_uri": "",
  "wrap_ttl": 60
}
```

## Response object (response) ((#response))

The following response object definition includes example data with simple types (`string`, `bool`, `int`) and used in other JSON examples that include a `<response>` object.

| Attribute | Type | Description |
| :---- | :---- | :---- |
| `auth` | `object` | If the request results in a token being created, an `auth` object with the token information. See [`auth`](#auth) above. |
| `headers` | `object` | Set of HTTP response headers sent by the plugin that handled the API request. |
| `redirect` | `string` | For requests sent to authentication backends, the URL to which the authentication backend redirected the user for further authentication. |
| `warnings` | `list(string)` | If the API returned one or more warnings, a list of the warning messages. |
| `data` | `object` | JSON object containing the response payload. This is dependent on the API endpoint called. |  |
| `secret` | `object` | If the API returned a [leased secret](/vault/docs/concepts/lease), a JSON object with one attribute, `lease_id`, that identifies that leased secret. |
| `wrap_info` | `object` | If the API returned a [response-wrapped secret](/vault/docs/concepts/response-wrapping), a JSON object containing the properties of the wrapping token. See below for the attributes in the JSON object. |
| `mount_class` | `string` | Type of API mount, `auth` or `secret`. |
| `mount_accessor` | `string` | Unique identifier of the Vault mount (secret engine or authentication backend) that responded to the API request. |
| `mount_type` | `string` | Type of Vault mount that responded to the API request. |
| `mount_running_plugin_version` | `string` | Version string for the Vault mount that responded to the API request. |
| `mount_running_sha256` | `string` | If the mount that received the API request is an external plugin, the SHA-256 hash of the plugin's running version. |
| `mount_is_external_plugin` | `boolean` | Whether the mount that received the API request is an external plugin. |

```json
{
  "auth": <auth>,
  "data": {},
  "headers": {},
  "mount_accessor": "",
  "mount_class": "",
  "mount_is_external_plugin": false,
  "mount_point": "",
  "mount_running_sha256": "",
  "mount_running_plugin_version": "",
  "mount_type": "",
  "redirect": "",
  "secret": {
    "lease_id": ""
  },
  "wrap_info": {
    "accessor": "",
    "creation_path": "",
    "creation_time": "",
    "token": "",
    "ttl": 60,
    "wrapped_accessor": ""
  },
  "warnings": [
    ""
  ]
}
```

## JSON schemas

<details>
<summary>Request audit entries</summary>

@include 'audit/request-entry-json-schema.mdx'

</details>

<details>
<summary>Response audit entries</summary>

@include 'audit/response-entry-json-schema.mdx'

</details>

## Sample entries

<details>
<summary>Sample request audit entry</summary>

```json
{
  "auth": {
    "accessor": "hmac-sha256:3348fe9b24b078f97d747363dda2d55bb0445e90b512e9f68f48d289fed798b3",
    "client_token": "hmac-sha256:c39c69748f0894cb4cd0333c779e72343ba45af287649d0fbcc37e9b079abe5d",
    "display_name": "userpass-alice",
    "entity_id": "62ff123b-7609-1ed9-5707-ea621da72de7",
    "metadata": { "username": "alice" },
    "policies": ["default"],
    "policy_results": {
      "allowed": true,
      "granting_policies": [
        { "type": "" },
        { "name": "default", "namespace_id": "root", "type": "acl" }
      ]
    },
    "token_policies": ["default"],
    "token_issue_time": "2025-06-04T16:01:31-04:00",
    "token_ttl": 2764800,
    "token_type": "service"
  },
  "request": {
    "client_id": "62ff123b-7609-1ed9-5707-ea621da72de7",
    "client_token": "hmac-sha256:3431e8c2ce0e5f5e179a857fcf9d948afd83363de9f64a5e956851262e1285e0",
    "client_token_accessor": "hmac-sha256:3348fe9b24b078f97d747363dda2d55bb0445e90b512e9f68f48d289fed798b3",
    "headers": { "user-agent": ["Go-http-client/1.1"] },
    "id": "79cc9b26-488f-eabf-2a97-303ed3bef0d6",
    "mount_class": "auth",
    "mount_point": "auth/token/",
    "mount_running_version": "v1.19.1+builtin.vault",
    "mount_type": "token",
    "namespace": { "id": "root" },
    "operation": "read",
    "path": "auth/token/lookup-self",
    "remote_address": "127.0.0.1",
    "remote_port": 64199
  },
  "time": "2025-06-04T20:02:46.117181Z",
  "type": "request"
}
```

</details>

<details>
<summary>Sample response audit entry</summary>

```json
{
  "auth": {
    "accessor": "hmac-sha256:3348fe9b24b078f97d747363dda2d55bb0445e90b512e9f68f48d289fed798b3",
    "client_token": "hmac-sha256:c39c69748f0894cb4cd0333c779e72343ba45af287649d0fbcc37e9b079abe5d",
    "display_name": "userpass-alice",
    "entity_id": "62ff123b-7609-1ed9-5707-ea621da72de7",
    "metadata": { "username": "alice" },
    "policies": ["default"],
    "policy_results": {
      "allowed": true,
      "granting_policies": [
        { "type": "" },
        { "name": "default", "namespace_id": "root", "type": "acl" }
      ]
    },
    "token_policies": ["default"],
    "token_issue_time": "2025-06-04T16:01:31-04:00",
    "token_ttl": 2764800,
    "token_type": "service"
  },
  "request": {
    "client_id": "62ff123b-7609-1ed9-5707-ea621da72de7",
    "client_token": "hmac-sha256:3431e8c2ce0e5f5e179a857fcf9d948afd83363de9f64a5e956851262e1285e0",
    "client_token_accessor": "hmac-sha256:3348fe9b24b078f97d747363dda2d55bb0445e90b512e9f68f48d289fed798b3",
    "headers": { "user-agent": ["Go-http-client/1.1"] },
    "id": "79cc9b26-488f-eabf-2a97-303ed3bef0d6",
    "mount_accessor": "auth_token_d43d387d",
    "mount_class": "auth",
    "mount_point": "auth/token/",
    "mount_running_version": "v1.19.1+builtin.vault",
    "mount_type": "token",
    "namespace": { "id": "root" },
    "operation": "read",
    "path": "auth/token/lookup-self",
    "remote_address": "127.0.0.1",
    "remote_port": 64199
  },
  "response": {
    "data": {
      "accessor": "hmac-sha256:3348fe9b24b078f97d747363dda2d55bb0445e90b512e9f68f48d289fed798b3",
      "creation_time": 1749067291,
      "creation_ttl": 2764800,
      "display_name": "hmac-sha256:e9fb3affb6ae22b7f747e1a60bdda5b57809c9e64ae6f39ebac24e371e6b9d89",
      "entity_id": "hmac-sha256:d2458e3011b3567a0070f22bcdd5e513aeb3473457922e1866f01463ccce2b11",
      "expire_time": "2025-07-06T16:01:31.771304-04:00",
      "explicit_max_ttl": 0,
      "id": "hmac-sha256:c39c69748f0894cb4cd0333c779e72343ba45af287649d0fbcc37e9b079abe5d",
      "issue_time": "2025-06-04T16:01:31.771306-04:00",
      "meta": {
        "username": "hmac-sha256:b93081f3689ff25929e88d5c323631ccf7d6145cd9f33c0c5129a7a340248b9a"
      },
      "num_uses": 0,
      "orphan": true,
      "path": "hmac-sha256:82f79af6be9e1d33d6821a8cfcfcba3196e5ec68512c1f5ed4c919acd8443dd6",
      "policies": [
        "hmac-sha256:1b1a37ccd3a6a78da781140396f04eb50e3460504492d2da75b446d775d3325b"
      ],
      "renewable": true,
      "ttl": 2764725,
      "type": "hmac-sha256:b835fe7ff7616f2023c77f6dbddc7afd83ef5c6644aba61c574c378dda710809"
    },
    "mount_accessor": "auth_token_d43d387d",
    "mount_class": "auth",
    "mount_point": "auth/token/",
    "mount_running_plugin_version": "v1.19.1+builtin.vault",
    "mount_type": "token"
  },
  "time": "2025-06-04T20:02:46.117567Z",
  "type": "response"
}
```

</details>
